Change over from LNUG to OSDC

--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
         <!--[if lt IE 9]>
         <script src="lib/js/html5shiv.js"></script>
         <![endif]-->
+
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
     </head>
 
     <body>
 
         <div class="reveal">
 
-            <header>
-              <img src="images/ibm-cds.png" />
-            </header>
+
+          <header style="width: 90%;">
+            <img src="images/ibm-cds.png" style="float: left;">
+            <h2 style="font-size: 2rem; float: right; margin-top: 0.5em;">
+              <i class="fa fa-twitter"></i><i class="fa fa-github"></i> / ukmadlz
+            </h2>
+          </header>
 
             <div class="slides">
 
