Popular Graph DBs and details

--- a/slides/what-weve-learnt.html
+++ b/slides/what-weve-learnt.html
@@ -3,3 +3,4 @@
 <p class="fragment" >NoSQL is a lie</p>
 <p class="fragment" >Why NoSQL grew up the way it did</p>
 <p class="fragment" >And it's just different databases for different jobs</p>
+<p class="fragment" >Some reasons to use different databases</p>
