Clean up header & footer

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="reveal">
 
 
-          <header style="width: 90%;">
+          <header style="width: 97%;">
             <img src="images/ibm-cds.png" style="float: left;">
             <h2 style="font-size: 2rem; float: right; margin-top: 0.5em;">
               <i class="fa fa-twitter"></i><i class="fa fa-github"></i> / ukmadlz
@@ -661,7 +661,7 @@
 
             <footer>
               © IBM Corporation 2016. All Rights Reserved.
-              <img class="ibm" src="images/ibmpos_blurgb.jpg" />
+              <img class="ibm" src="images/ibmpos_blurgb.png" />
             </footer>
 
         </div>
